--- a/build-tools-internal/version.properties
+++ b/build-tools-internal/version.properties
@@ -35,9 +35,10 @@ protobuf          = 3.21.9
 # test dependencies
 randomizedrunner  = 2.8.0
 junit             = 4.13.2
-junit5            = 5.7.1
+junit5            = 5.10.2
 hamcrest          = 2.1
 mocksocket        = 1.2
+jqwik             = 1.8.5
 
 # test container dependencies
 testcontainer     = 1.19.2
