--- a/test/framework/build.gradle
+++ b/test/framework/build.gradle
@@ -19,6 +19,8 @@ dependencies {
   api project(':libs:elasticsearch-preallocate')
   api "com.carrotsearch.randomizedtesting:randomizedtesting-runner:${versions.randomizedrunner}"
   api "junit:junit:${versions.junit}"
+  runtimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
+  runtimeOnly "org.junit.vintage:junit-vintage-engine:${versions.junit5}"
   api "org.hamcrest:hamcrest:${versions.hamcrest}"
   api "org.apache.lucene:lucene-test-framework:${versions.lucene}"
   api "org.apache.lucene:lucene-codecs:${versions.lucene}"
